feat(among-us-ai): Add complete UI and action logging system
- Add React-based UI with live game state visualization
- Add comprehensive action logging system with SSE streaming
- Add GameServer with Bun HTTP server on port 3000
- Add SSEManager using better-sse library for real-time event streaming
- Add ActionLogger with in-memory storage (10K actions) and query methods
- Add API endpoints: /api/actions, /api/actions/recent, /api/actions/since, /api/game/state, /api/actions/stats
- Add static file serving for React app from web/dist/
- Add MUI Base components for polished UI
- Add theme toggle (dark/light mode with system preference and localStorage persistence)
- Add LogViewer for scrolling action log
- Add GameStateVisualization for player cards and game info
- Add useEventStream hook with auto-reconnection (5s interval, 10 max retries)

Fixes:
- Static file serving path: ../../web/dist/ (correct for src/server/index.ts location)
- Arrow function for fetch handler to preserve this context
- SSE implementation: use createResponse() instead of createSession() for Bun compatibility
- SSE API calls: use activeSessions and sessionCount

All endpoints verified working:
- UI at / returns 200
- Assets at /assets/ return 200
- Health endpoint returns {status: ok}
- SSE endpoint connects successfully
- All API endpoints return correct data

--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "private": true,
   "scripts": {
     "dev": "bun run --watch src/index.ts",
+    "dev:full": "bun run build:web && bun run --watch src/index.ts",
+    "build": "bun run build:web && bun run build:server",
+    "build:web": "cd web && bun run build",
+    "build:server": "bun build src/index.ts --outdir dist --target bun",
     "lint": "eslint .",
     "format": "prettier --write .",
-    "test": "bun test"
+    "test": "bun test",
+    "test:server": "bun run dev & sleep 3 && echo 'Testing server...' && curl -s http://localhost:3000/health && pkill -f 'bun.*index.ts'"
   },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
